Support custom preparationBatchSize defined via SourceKit's options

--- a/Sources/SKOptions/CMakeLists.txt
+++ b/Sources/SKOptions/CMakeLists.txt
@@ -3,7 +3,8 @@ add_library(SKOptions STATIC
   BuildConfiguration.swift
   ExperimentalFeatures.swift
   SourceKitLSPOptions.swift
-  WorkspaceType.swift)
+  WorkspaceType.swift
+  PreparationBatchingStrategy.swift)
 set_target_properties(SKOptions PROPERTIES
   INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 target_link_libraries(SKOptions PUBLIC
