--- a/Sources/SourceKitLSP/CMakeLists.txt
+++ b/Sources/SourceKitLSP/CMakeLists.txt
@@ -22,7 +22,7 @@ add_library(SourceKitLSP STATIC
   SourceKitLSPCommandMetadata.swift
   SourceKitLSPServer.swift
   SymbolLocation+DocumentURI.swift
-  SyntacticTestIndex.swift
+  SyntacticIndex.swift
   TestDiscovery.swift
   TextEdit+IsNoop.swift
   Workspace.swift
