Resolve `/usr/bin/*` shims on macOS
CMake was previously doing this itself before 4.0, but seems to be
inserting `/usr/bin/*` now. Resolve the `/usr/bin` trampoline ourselves
in a similar fashion to swiftly (but with xcrun).

Resolves rdar://163462990.

--- a/Sources/BuildServerIntegration/CMakeLists.txt
+++ b/Sources/BuildServerIntegration/CMakeLists.txt
@@ -20,8 +20,8 @@ add_library(BuildServerIntegration STATIC
   LegacyBuildServer.swift
   MainFilesProvider.swift
   SplitShellCommand.swift
-  SwiftlyResolver.swift
-  SwiftPMBuildServer.swift)
+  SwiftPMBuildServer.swift
+  SwiftToolchainResolver.swift)
 set_target_properties(BuildServerIntegration PROPERTIES
   INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 target_link_libraries(BuildServerIntegration PUBLIC
