--- a/Sources/SwiftSourceKitClientPlugin/CMakeLists.txt
+++ b/Sources/SwiftSourceKitClientPlugin/CMakeLists.txt
@@ -5,15 +5,15 @@ set_target_properties(SwiftSourceKitClientPlugin PROPERTIES
   INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 target_compile_options(SwiftSourceKitClientPlugin PRIVATE 
   $<$<COMPILE_LANGUAGE:Swift>:
+    "SHELL:-module-alias SKLogging=_SKLoggingForPlugin"
     "SHELL:-module-alias SourceKitD=SourceKitDForPlugin"
     "SHELL:-module-alias SwiftExtensions=SwiftExtensionsForPlugin"
-    "SHELL:-module-alias ToolsProtocolsSwiftExtensions=_ToolsProtocolsSwiftExtensionsForPlugin"
   >)
 target_link_libraries(SwiftSourceKitClientPlugin PRIVATE
   Csourcekitd
   SourceKitD
   SwiftExtensions
-  SwiftToolsProtocols::ToolsProtocolsSwiftExtensions
+  SwiftToolsProtocols::_SKLoggingForPlugin
   SwiftSourceKitPluginCommon
   $<$<NOT:$<PLATFORM_ID:Darwin>>:FoundationXML>)
 
