Allow opting in to using the new SwiftPM BSP when opening a package

--- a/Sources/SKOptions/CMakeLists.txt
+++ b/Sources/SKOptions/CMakeLists.txt
@@ -3,8 +3,9 @@ add_library(SKOptions STATIC
   BuildConfiguration.swift
   ExperimentalFeatures.swift
   SourceKitLSPOptions.swift
-  WorkspaceType.swift
-  PreparationBatchingStrategy.swift)
+  PreparationBatchingStrategy.swift
+  SwiftPMBuildSystem.swift
+  WorkspaceType.swift)
 set_target_properties(SKOptions PROPERTIES
   INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 target_link_libraries(SKOptions PUBLIC
