Automatically set the issue type for issues created through templates
I recently cleaned up our issues to use the GitHub issue types *Bug*, *Feature*, and *Task* instead of the *bug* and *enhancement* labels. Reflect this in the issue forms.

--- a/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yml
@@ -1,6 +1,6 @@
 name: Feature Request
 description: A suggestion for a new feature
-labels: [enhancement]
+type: Feature
 body:
   - type: textarea
     id: description
