feat: add inlay hints for trailing closure parameters

--- a/Sources/SwiftLanguageService/CMakeLists.txt
+++ b/Sources/SwiftLanguageService/CMakeLists.txt
@@ -27,6 +27,7 @@ add_library(SwiftLanguageService STATIC
   IndentationRemover.swift
   InlayHints.swift
   InlayHintResolve.swift
+  TrailingClosureInlayHints.swift
   MacroExpansion.swift
   OpenInterface.swift
   PlaygroundDiscovery.swift
