.github: Use issue types instead of labels in issue templates

--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -1,6 +1,7 @@
 name: Bug Report
 description: Something isn't working as expected
-labels: [bug]
+labels: []
+type: Bug
 body:
   - type: input
     id: version
