Add TypeDefinition.swift to CMakeLists.txt

--- a/Sources/SwiftLanguageService/CMakeLists.txt
+++ b/Sources/SwiftLanguageService/CMakeLists.txt
@@ -52,6 +52,7 @@ add_library(SwiftLanguageService STATIC
   SyntaxHighlightingTokens.swift
   SyntaxTreeManager.swift
   TestDiscovery.swift
+  TypeDefinition.swift
   VariableTypeInfo.swift
 )
 set_target_properties(SwiftLanguageService PROPERTIES
